# llama-sql

./: llama-sql.py  pyproject.toml
