[tool.poetry]
name = "llama-sql"
version = "0.1.0"
description = ""
authors = ["Amarnath Karthi <97amarnathk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "llama-sql:start"